# postgres_hybrid_search

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  app.py  docker-compose.yml  pyproject.toml
db/: Dockerfile
db/init/: 02-schema.sql
