[project]
name = "pg-hybrid-search-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.13.4",
    "openai>=1.40.0",
    "psycopg[binary]>=3.2.1",
    "pypdf>=4.2.0",
    "python-dotenv>=1.0.1",
    "python-docx>=1.1.2",
    "streamlit>=1.38.0",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
